--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -79,8 +80,9 @@
     "typescript-eslint": "^8.38.0",
     "vite": "^5.4.19"
   },
-"engines": {
-  "node": "22.x"
+  "engines": {
+    "node": "22.x"
+  }
 }
-}
+
 
